# prism

./: .gitignore  DATABASE_SETUP.md  ENDPOINT_GUIDE.md  INTEGRATION_SUMMARY.md  README.md  band_client.py  band_lab_dbs_script.sql  band_orchestrator.py  database.py  main.py  pyproject.toml  test_new_endpoints.sh
agents/: context_discovery.py  legal_agent.py  llm_client.py  procurement_agent.py  security_agent.py
core/: config.py
docs/: DB_Setup_README.md  Project_README.md  Project_Structure_README.md
models/: agent.py  enterprise.py  policy.py  procurement.py  regulation.py  vendor.py
routers/: agent.py  enterprise.py  procurement.py  regulation.py  vendor.py
schemas/: agent.py  enterprise.py  procurement.py  regulation.py  vendor.py
services/: context_service.py  embedding_service.py  enterprise_service.py  ingestion_service.py
vendor_documents/: wf-68dd3e54_f64ed7a1.txt
