[project]
name = "band"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "band-sdk>=1.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.6",
    "uvicorn>=0.49.0",
]
